@@ -3,6 +3,7 @@ Revision history for Perl extension Spreadsheet::XLSX.
 0.17
 
 	- fix RT #139898: missing file from MANIFEST
+    - fix RT #127829: [Warning] Argument "#N/A" isn't numeric in int
 
 0.16
 
